<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Fairphone Updater</string>
    <string name="fairphone">Fairphone</string>
    <string name="android">Android</string>
    <string name="updater_service">Updater Service</string>
    <string name="a_different_os_from_the_current">a different operating system from your current one.</string>
    <string name="an_older_version_of_os">an older version of your current operating system.</string>
    <string name="android_os">Stock Android</string>
    <string name="config_file_download_error_message">Error downloading config file</string>
    <string name="config_file_download_link_error_message">Error downloading config file. Link used:</string>
    <string name="dev_mode_message">Developer mode enabled for this session</string>
    <string name="device_not_supported_message">Device not supported</string>
    <string name="download_complete">Download complete</string>
    <string name="download_started">Download started</string>
    <string name="erase_all_data_warning_message">This update will erase all your data.</string>
    <string name="erase_all_partitions_warning_message">This update will erase all your data.\nDo you want to continue?</string>
    <string name="error_downloading">Error downloading</string>
    <string name="fairphone_os">Android for Fairphone</string>
    <string name="fairphone_update_message">New Fairphone update available</string>
    <string name="fairphone_update_message_title">Checking for updates</string>
    <string name="go_ahead_and_install_it">Install it</string>
    <string name="google_apps_connection_description">The file you\'re trying to download is too large for mobile connections (~100MB). Please enable Wi-Fi connection and try again.</string>
    <string name="google_apps_connection_title">Wi-Fi disabled</string>
    <string name="google_apps_denied_permissions_description">Fairphone Updater could not obtain the necessary permissions to install Google Apps. If you chose DENY, please restart the installer and select ALLOW and REMEMBER CHOICE FOREVER.</string>
    <string name="google_apps_denied_permissions_title">Denied permissions</string>
    <string name="google_apps_disclaimer_agree">I Agree</string>
    <string name="google_apps_disclaimer_description">For the full Android and Google mobile experience like the app store, your phone needs extra content and software. Unfortunately, as Fairphone doesn\'t have a license yet, we cannot pre-install this content, nor can we provide it directly ourselves. We are working with the content owner to achieve this.\nPress « I Agree » below to download this content from an external secured source. Installing this content is your own responsibility.\nIf you do not agree, your phone will still work with basic Android apps, of course, but you will miss some services from Google.</string>
    <string name="google_apps_disclaimer_title">Install Google Apps</string>
    <string name="google_apps_download_error">Error downloading files, please try again.</string>
    <string name="google_apps_download_title">Downloading Google Apps</string>
    <string name="google_apps_failed_download_description">Downloaded files are corrupted. Retry?</string>
    <string name="google_apps_failed_download_title">Download failed</string>
    <string name="google_apps_initial_title">Install\nGoogle Apps</string>
    <string name="google_apps_install_title">Installing Google Apps</string>
    <string name="google_apps_installer_name">Google Apps Installer</string>
    <string name="google_apps_permissions_description">Fairphone Updater will now ask you for Superuser access. We assure you it\'s perfectly safe. Please choose ALLOW and REMEMBER CHOICE FOREVER when asked.</string>
    <string name="google_apps_permissions_title">System permissions</string>
    <string name="google_apps_re_install_description">Remove this or\nclick to re-install</string>
    <string name="google_apps_re_install_title">Google Apps installed</string>
    <string name="google_apps_reboot_description">The system needs to reboot to complete the installation.\n\nAfter the reboot, follow the steps to set up Google Apps.</string>
    <string name="google_apps_reboot_failed_description">Google Apps are installed. Could not reboot device, please reboot manually.</string>
    <string name="google_apps_reboot_failed_title">Failed reboot</string>
    <string name="google_apps_reboot_title">Rebooting device</string>
    <string name="google_apps_reinstall_description">To reinstall the app store on your phone, press and hold the Home screen, press the Widgets icon, search for the Google Apps Installer widget and drag it to your Home screen and select it.</string>
    <string name="google_apps_reinstall_request_title">Reminder</string>
    <string name="google_apps_uninstall_description">Delete this\nInstaller</string>
    <string name="google_apps_uninstall_title">Google Apps installed</string>
    <string name="google_apps_unzip_title">Extracting Google Apps</string>
    <string name="google_apps_updater_installing_description">Fairphone Updater is updating your operating system in the background. Please try again later.</string>
    <string name="important_notice">Important notice</string>
    <string name="important_notice_message">It\'s important that you keep in mind that installing other operating systems will change the user experience.</string>
    <string name="install">Install</string>
    <string name="install_update">Install update</string>
    <string name="installed">Installed</string>
    <string name="invalid_md5_download_message">Invalid file downloaded: Wrong MD5.</string>
    <string name="invalid_signature_download_message">Invalid file downloaded: Bad signature</string>
    <string name="latest_version">Latest version</string>
    <string name="new_os">New operating system</string>
    <string name="no_space_available_cache_message">No space available on /cache.</string>
    <string name="no_space_available_sd_card_message">No space available on SD card.</string>
    <string name="older_version">Older version</string>
    <string name="older_version_os_install_confirmation">Are you sure you want to continue?</string>
    <string name="older_version_os_install_confirmation_checkbox">I know and understand all implications of performing this installation</string>
    <string name="older_versions">Older versions</string>
    <string name="os_update_has_started_message">The update has started. This may take some time depending on your network connection speed.</string>
    <string name="other_os_options">Enter advanced mode</string>
    <string name="please_be_patient">Just a moment&#8230;</string>
    <string name="restart">Restart</string>
    <string name="restart_your_phone_message">Restart your phone to complete the update.</string>
    <string name="take_me_back">Take me back</string>
    <string name="update_is_available">Update is available</string>
    <string name="update_version">Update version</string>
    <string name="updater_google_apps_installing_description">Google Apps installation is occurring in the background. Please try again later.</string>
    <string name="want_to_change_your_os">Are you an advanced user?</string>
    <string name="warning">Warning</string>
    <string name="wifi_disabled">Wi-Fi disabled</string>
    <string name="wifi_discaimer_message">The file you\'re trying to download is too large for mobile connections (~200MB). Please enable Wi-Fi connection and try again.</string>
    <string name="your_are_about_to_install">You are about to install</string>
    <string name="your_current_os_version">Your current operating system version</string>
    <string name="your_os_is_up_to_date">Your operating system is up-to-date</string>
    <string name="fairphone_os_info">This Android for Fairphone operating system has an extra layer of Fairphone flavor with features like the Peace of Mind widget, Edge Swipe, and the Last Used / Most Used Apps widget.\n\nWe recommend installing Android for Fairphone on your device to have the best Fairphone experience.</string>
    <string name="android_os_info">This Stock Android operating system is the pure Android experience without any additional Fairphone modifications.</string>
    <string name="about">about</string>
    <string name="appStoreReinstall">Reinstall the AppStore</string>
    <string name="app_store">App Stores</string>
    <string name="gapps_store_install">Install Google Apps</string>
    <string name="gapps_store_hide_reminder">or hide reminder</string>
    <string name="title_activity_beta_enabler">Fairphone Beta Program</string>
    <string name="enable_beta">Enable Beta</string>
    <string name="beta_is_enabled">Beta is enabled</string>
    <string name="beta_activation_failed">Failed to activate beta</string>

</resources>