<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="@dimen/alert_padding" >

    <TextView
        style="@style/TextLight24BlueDark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/alert_title_margin_bottom"
        android:text="@string/about"
        android:textAllCaps="true" />

    <TextView
        style="@style/TextLight24BlueDark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/alert_text_margin_bottom"
        android:text="@string/fairphone_os" />

    <TextView
        android:id="@+id/about_version_type_info_text"
        style="@style/TextRegular14BlueDark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/fairphone_os_info" />

    <Button
        android:id="@+id/confirmation_yes_button"
        style="@style/ButtonSmallBlueDarkGrey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/alert_button_top_margin"
        android:text="@android:string/yes" />

</LinearLayout>