<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/googleAppsIntallerMain"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <FrameLayout
        android:id="@+id/installGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" >

        <ImageButton
            android:id="@+id/installButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/widget_gapps_widget_install" />

        <TextView
            android:id="@+id/installText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:text="@string/google_apps_initial_title"
            android:textColor="@color/google_blue"
            android:textSize="18sp" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/reinstallGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" >

        <ImageButton
            android:id="@+id/reinstallButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/widget_gapps_widget_uninstall" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/reinstallTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/google_apps_re_install_title"
                android:textColor="#c8c8c8"
                android:textSize="13.3dp" />

            <TextView
                android:id="@+id/reinstallText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/google_apps_re_install_description"
                android:textColor="#c8c8c8"
                android:textSize="18.5sp" />
        </LinearLayout>
    </FrameLayout>

</FrameLayout>