<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <LinearLayout
            android:id="@+id/current_version_group"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <include layout="@layout/fragment_main_version_up_to_date" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/gapps_reminder_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="7dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/install_gapps_button"
                android:layout_width="match_parent"
                android:layout_height="105dp"
                android:layout_alignParentBottom="true"
                android:background="@drawable/button_apps_installer"
                android:scaleType="fitCenter" />

            <TextView
                style="@style/TextRegular20White"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:gravity="end"
                android:paddingBottom="45dp"
                android:paddingEnd="140dp"
                android:paddingStart="0dp"
                android:text="@string/gapps_store_install" />

            <TextView
                style="@style/TextRegular14White"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:gravity="end"
                android:paddingBottom="28dp"
                android:paddingEnd="140dp"
                android:paddingStart="0dp"
                android:text="@string/gapps_store_hide_reminder" />

            <Button
                android:id="@+id/install_gapps_dismiss_button"
                android:layout_width="27dp"
                android:layout_height="105dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:background="@drawable/button_dismiss_apps_installer" />
        </RelativeLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/other_os_options_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_other_os_options"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="@dimen/main_padding"
        android:paddingBottom="@dimen/main_padding" >

        <TextView
            style="@style/TextRegular14GreyLight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/want_to_change_your_os" />

        <Button
            android:id="@+id/other_os_options_button"
            style="@style/ButtonTextBackgroundBlue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/other_os_options" />
    </LinearLayout>

</LinearLayout>